# ChangeLog for sys-process/fcron
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.17 2006/09/29 17:59:53 weeve Exp $

  29 Sep 2006; Jason Wever <weeve@gentoo.org> fcron-3.0.1-r2.ebuild:
  Stable on SPARC wrt bug #149376.

*fcron-3.0.1-r2 (31 Jul 2006)

  31 Jul 2006; Wolfram Schlich <wschlich@gentoo.org> +files/fcrontab,
  +fcron-3.0.1-r2.ebuild:
  Add /etc/fcrontab and install check_system_crontabs into /usr/sbin

  20 Jun 2006; Wolfram Schlich <wschlich@gentoo.org> metadata.xml:
  maintainership takeover (ka0ttic is MIA)

*fcron-3.0.1-r1 (20 Jun 2006)

  20 Jun 2006; Wolfram Schlich <wschlich@gentoo.org> +files/fcron.init,
  +fcron-3.0.1-r1.ebuild:
  fixing doc file installation, new init script supporting multiple instances
  (like the openvpn one)

  27 Apr 2006; Alec Warner <antarus@gentoo.org> files/digest-fcron-2.0.2,
  files/digest-fcron-2.9.5.1, files/digest-fcron-2.9.7,
  files/digest-fcron-3.0.0, Manifest:
  Fixing SHA256 digest, pass four

*fcron-3.0.1 (22 Feb 2006)

  22 Feb 2006; Aaron Walker <ka0ttic@gentoo.org> +fcron-3.0.1.ebuild:
  Version bump.

  25 Dec 2005; Diego Pettenò <flameeyes@gentoo.org> fcron-3.0.0.ebuild:
  Use bindnow-flags function instead of -Wl,-z,now.

  27 Oct 2005; Aaron Walker <ka0ttic@gentoo.org> files/fcron.rc6,
  fcron-3.0.0.ebuild:
  Add various use statements to the init for bug #25250; add a better
  explanation for when the pkg_setup EDITOR check fails, bug #108699.

  27 Sep 2005; Aaron Walker <ka0ttic@gentoo.org> fcron-3.0.0.ebuild:
  Use egetent to set --with-root{name,group} configure options, bug #107374.

  25 Sep 2005; Aaron Walker <ka0ttic@gentoo.org>
  files/fcron-2.0.0-configure.diff, fcron-3.0.0.ebuild:
  Added debug to IUSE for --with-debug configure option; also updated
  fcron-2.0.0-configure.diff so configure doesn't override CFLAGS.

*fcron-3.0.0 (12 Sep 2005)
