@@ -1,6 +1,6 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/fcron-2.9.5.1.ebuild,v 1.3 2005/05/20 13:10:17 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/fcron-2.9.5.1.ebuild,v 1.4 2006/09/29 19:19:03 wormo Exp $
 
 inherit eutils flag-o-matic pam
 
