@@ -1,6 +1,6 @@
 # Copyright 1999-2006 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/fcron-3.0.1-r2.ebuild,v 1.2 2006/09/29 17:59:53 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/fcron-3.0.1-r2.ebuild,v 1.3 2006/09/29 19:19:03 wormo Exp $
 
 inherit cron pam eutils
 
@@ -9,7 +9,7 @@ HOMEPAGE="http://fcron.free.fr/"
 SRC_URI="http://fcron.free.fr/archives/${P}.src.tar.gz"
 
 LICENSE="GPL-2"
-KEYWORDS="~amd64 ~hppa ~mips ~ppc sparc ~x86"
+KEYWORDS="~amd64 ~hppa ~mips ppc sparc ~x86"
 IUSE="debug doc pam selinux"
 
 DEPEND="virtual/editor
