@@ -1,6 +1,10 @@
 # ChangeLog for sys-process/fcron
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.17 2006/09/29 17:59:53 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/fcron/ChangeLog,v 1.18 2006/09/29 19:19:03 wormo Exp $
+
+  29 Sep 2006; Stephanie Lockwood-Childs <wormo@gentoo.org>
+  fcron-3.0.1-r2.ebuild:
+  stable on ppc (Bug #149376)
 
   29 Sep 2006; Jason Wever <weeve@gentoo.org> fcron-3.0.1-r2.ebuild:
   Stable on SPARC wrt bug #149376.
